# ChangeLog for dev-util/suse-build
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/suse-build/ChangeLog,v 1.15 2013/05/27 16:38:29 miska Exp $

*suse-build-2013.05.17 (27 May 2013)

  27 May 2013; Michal Hrusecky <miska@gentoo.org>
  +suse-build-2013.05.17.ebuild, suse-build-9999.ebuild:
  Updated to the latest version (2013.05.17)
  Added missing dependency on cpio

  29 Apr 2013; Agostino Sarubbo <ago@gentoo.org> suse-build-2013.02.27.ebuild:
  Move KEYWORDS on another line to avoid ekeyword failure

  18 Mar 2013; Michal Hrusecky <miska@gentoo.org>
  -suse-build-2012.11.23.ebuild, suse-build-2013.02.27.ebuild:
  Fast stabilization to prevent broken stable

*suse-build-2013.02.27 (18 Mar 2013)

  18 Mar 2013; Michal Hrusecky <miska@gentoo.org>
  +suse-build-2013.02.27.ebuild, suse-build-9999.ebuild, metadata.xml:
  Fixing paths (bug#446074), version update, new symlink use flag (bug#433681)

  17 Dec 2012; Tomáš Chvátal <scarabeus@gentoo.org>
  -suse-build-2012.09.27.ebuild, suse-build-2012.11.23.ebuild:
  Stabilise on amd64 and x86, remove older.

*suse-build-2012.11.23 (05 Dec 2012)

  05 Dec 2012; Tomáš Chvátal <scarabeus@gentoo.org>
  +suse-build-2012.11.23.ebuild:
  Version bump to latest.

  16 Nov 2012; Agostino Sarubbo <ago@gentoo.org> suse-build-2012.09.27.ebuild:
  workaround for bug 399061

  15 Nov 2012; Tomáš Chvátal <scarabeus@gentoo.org>
  suse-build-2012.09.27.ebuild:
  Stable on amd64 and x86 as there are no probs.

  05 Nov 2012; Theo Chatzimichos <tampakrap@gentoo.org> metadata.xml:
  Move to SUSE team

*suse-build-2012.09.27 (02 Oct 2012)

  02 Oct 2012; Tomáš Chvátal <scarabeus@gentoo.org>
  +suse-build-2012.09.27.ebuild, -suse-build-2011.01.20-r1.ebuild,
  -suse-build-2011.09.26-r1.ebuild, suse-build-9999.ebuild:
  Version bump to latest. Cleanup older. Polish the ebuild a bit.

*suse-build-2011.09.26-r1 (30 Jul 2012)
*suse-build-2011.01.20-r1 (30 Jul 2012)
