@@ -1,7 +1,25 @@
-DIST obs-build-20130227.tar.gz 147092 SHA256 231c6b5c31e07dfedbd1b0a5ec30040529639bf376994b8c2837f3a9a3c3e0de SHA512 6b27c70a44dbb2d0bee7113d84eb3671b8ac8a09b9dc676d0989d93e6cc5f55033f14f67b012d8dad846179ff6f095190e897e14af5c52cdce1b9d98554777a4 WHIRLPOOL 5b25f55a5fe3919c1ac97228d87cb406bf657eb74cdedb169f236023fa7dd3d978ee699a2cc9755bdba5a070df83f69709f63667f8da5eea2a2fb13c1b26a18d
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST obs-build-20130517.tar.gz 153859 SHA256 684e0667da050609fc8b1eab1e0130bd800ee1daa46f4c33a98a58cf8131356c SHA512 431f9f03ca97147e4863418ea3d8d3d903e4d4b6d803ad6791955521a8869f3aa460827a4cac56fcc776b390faddac7f339cd8dcb5987a148bb4f26707ca5142 WHIRLPOOL ffe3d5d297dc083b1fb29f91d7be49c385eada97668fb45cb73fd535cc60a08e30a96d38f2bdace13ebf368ab204369e19411e8ee44ced9f232d9d111759d0d9
-EBUILD suse-build-2013.02.27.ebuild 1450 SHA256 d9afb7d5c42da3efa8ed0f0d31c09e1c9ffccc32252a5a55f33ea402fe4ea6ab SHA512 b5dab0b7fca0fb4cbd2598f9189368405eef5b3f27660eae1d907ab58a06f1161faeb44e0bdf530fc19b616375b1c78886e99674aa45b9c699e5f7e02167a30b WHIRLPOOL 3227d83fee270c0335e1bcce05ac4561f03153a7358d9b1be229763b7e7ba5bddbc29bb592653e3c46d8c6a6871c84a56da66b9cb95194e06f4639cc1aaa323a
-EBUILD suse-build-2013.05.17.ebuild 1469 SHA256 7a287c924eba607e9a7bbdb2a2509ad0d40062a1c36102082d2106a28b4e2d1b SHA512 ad911431a818133fb77ee243dfca61e067f1904d11906a1d72bd9b773ca8baa3b191f73ce1194a25edc93439f997d6068895cbf20a95387a62e51943d93bdc84 WHIRLPOOL 9cadda567dfdaaa66f14276d381aa182e660042f9cdc2c4c79255a59ee54f85f7aa08f1c527be50257e3e889a390e108f26423d17f493cfcbcd464ea258d7111
+EBUILD suse-build-2013.05.17.ebuild 1471 SHA256 aa328f5815d6bdfbad5df05590a77a2224cd45069f874fc22affff267c4b88f9 SHA512 a304d2871ca7ec432c02519fa42af4378a12672ae963a5b1ea71362e67a485bae4c52d43dd81f6bfa1c4c4e28cc8874cf1c1a7d0a98a2c65c620fcca1f23d8ac WHIRLPOOL c297311198eae745ab56b03fe542d9e3dcb91a36697d0da78140b46ce2acfa1ff3418a149bc47caa8813630c5e56098c7a11853999895081726784d64d43c926
 EBUILD suse-build-9999.ebuild 1461 SHA256 0f2ba91ade421c7f9e5f7c715aa681952e8aa450e53ad84d5ec6d9b54fc86378 SHA512 810ce0cde5f680050d15663bee64497150bcd8a4e354b46bb5355b2e0b774b9d2c24b183606ddae391295ffc75832c10c9e51a9c5c480e8dd9322eaae3b5458a WHIRLPOOL 697cbfda95205578757b68030e23049d103c254e0039e6dbe3acf36215213a538f2290387b8febda5a75ad7388d856b779be08477eb7a4be2e197aa0a9233083
-MISC ChangeLog 3094 SHA256 cc6740d098ad99f716c499e71c55e6c16a1f1ff161d07408ad8c9a44b185e691 SHA512 ac4194dcf995b7c006b534c8c727abcb3724fe1f0bd2048ed4e49b8add432db1312558c65000ac670c452fb830859feb179021d209c708b967a5831c71adb1c1 WHIRLPOOL 32b732b7cc3563a691aa664cb844a188ab5c9c2ccca43b713ef1f5be1f681c94a9db8adb2644ba3e38466cfb9c33caa5e855ac7916cea470b90ed28ccbe2c0c4
+MISC ChangeLog 3259 SHA256 3cf8f3e7e021b44fa6cbcb333498acd828e4127c46cd717d2eac274c7ba527e3 SHA512 dd45512daacab8e1b534092b48cd54221f4d587ecdcf054ed16d8dd4830c25203d0d8e633a11ac634e4e3e3717ec1ce94c5c701cfbe79cc6317a72d9e62fa11a WHIRLPOOL 44b564b17fce6ef03414945559807a333147ea6b57219c5454e066f61bf0891e73b38b2bc5f73a8c4632b4c92b806fc756a10ea5cae9ca3518d58bb01fa14393
 MISC metadata.xml 409 SHA256 cc5c5706ac5406afec663da06a93e4c91f96c2ad3dce51e7a6769d8da9031205 SHA512 e27aada2ced11515a108f0203cad9a6cede66c3d33ea91846113a118933107024fabefb5cdfdb8d6159058d4fd3e962d29a205fc637df976a156582e48e60e7b WHIRLPOOL c62713b4d1e52190ba07d06e604b672244efbbe76d95b29565487035a4e77956b348daa59355011c80bfae0860435844285a60c76b9714c5c4fdeb77f6f1f4b4
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.20 (GNU/Linux)
+
+iQIcBAEBCAAGBQJRxEP5AAoJEOSiRoyO7jvoFXkQAJc0PgjBA+lILhUWbKCPJ0Y9
+SqELcrK/zNLSI6060HQ/i+s/7pwdbg364MSn9w5vOJWJewNoeOe0952aC5c+Qd5c
+F6kftGg7NzWMeYnGzKfhPaMtP0+LZZA5QiCKtg7Dim4gEK1WAp2j9SJGzZJlkoaY
+EzaTeOOtG1pO3CSqD7FkoW3jAGKSEYqALkhScG0zUET3OHOFh1ppvVj5zoOlkWoN
+rxSeDgG0hwHeI3jZoV4N2RgedZwjWussZGrF5FIbaDrXlU8c9eyxOvo6IULbmKTy
+Iz7Hp1TxtdsmC54TRFf9jUUEzMiz9yWqyZwgyx1agKq1vBzcBvvk8RZtaOkXy323
+DhAeXWlHtxOyw+fYpJs8JyHHuNxG1cth+h7eBASQHhjf25RCoDF822jUJJTMfM0u
+31/2ieagPLgi8JxlsvllBtLAKFHhOmTG/VyVo2aIDhep4yZCAXYUW3gbAw3UbQFM
+NEgjPebI85g85Q4mcCfUKM//qrTHb5cwu2g52GaPP2kwQims+Py5RuPGCq1rGR7U
+yLSZNGP2PaMX68QfO1oauohHOyhzChMp5k+LDT54yiV9pEyCSUbRY0Orm/48OQ/m
+nMhticMCbeztswbGCglqUguhQ1hR6R6dS7cTtu5G5StUC25qxyTnN7yA4wK4Arax
+ZxYZsBj/n5yjbQQIS49N
+=IGBo
+-----END PGP SIGNATURE-----
