@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/suse-build/suse-build-2013.05.17.ebuild,v 1.1 2013/05/27 16:38:29 miska Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/suse-build/suse-build-2013.05.17.ebuild,v 1.2 2013/06/21 12:15:56 scarabeus Exp $
 
 EAPI=5
 
@@ -26,7 +26,7 @@ LICENSE="GPL-2"
 SLOT="0"
 IUSE="symlink"
 [[ "${PV}" == "9999" ]] || \
-KEYWORDS="~amd64 ~x86"
+KEYWORDS="amd64 x86"
 
 RDEPEND="
 	virtual/perl-Digest-MD5
