@@ -4,26 +4,26 @@ Hash: SHA256
 AUX pidgin-2.10.0-gold.patch 1003 SHA256 26657c717f4e624b0b3af8746b61b0861ba4da65e55e49a753cfefaba72c60cb SHA512 9c54d1da082362325aa5ec0f25356e629adb7f639a0ea98a8aff726e4769cb21bf3350772aa219b7ad021630d13113de02c42317551edfe5f044ae40ac0df984 WHIRLPOOL 77fdb2855ac8fe3dc163a42d18df1847f849d9fc42cb09565746e70e72f9e2f74f3d33f44c6bc6f8277047d6d05bb9f12507a8f8c16e1c672c201a75c8fa7c8b
 AUX pidgin-2.10.7-fix-cap.patch 692 SHA256 4dbf4e8123d7b7550f99fb5b8fb97e98b44551750436ca5327f8257438400dcd SHA512 0a1dc0ceaf78416ecd409a4bdcecef83a48cbdea50314d55a6cb1e1cad06775e1e8ac23f069ef4ed8ca8b4f3bb99f184804fddf7812adfcba8c8920a9c6efdbc WHIRLPOOL 8beca2bcb10380034ccd461559e7504922613de19649ca045e88c19de452bc4beb4b47c4b9976cf24854edf502ce11e74de00f5add86025c4bd066e17e85a962
 AUX pidgin-2.10.7-link_sasl_in_irc_plugin.patch 642 SHA256 8f91df48549004c80d5989bfdcc11f7a7805f3770b6aa2a5676d86eb334cf5b8 SHA512 3bc39f994473e01ab532e804481a858b0e1ddc3252a27fc29cb32c550e207699ee39da0057b6e86f4a33870b29f44b701a1614e93ff223930208ef0e8061fed1 WHIRLPOOL 5d0ce684e06fbe8c507310947696fed1910f631f93b0e71fc44610e06c6b1d93b966af89d4def15d8fcaa1b11001ab7066e94c732f58423046bc9e645816a91e
-AUX pidgin-eds-3.6.patch.bz2 2352 SHA256 321185dd5f44e502f671b17e84fa1ca2e08a3f7c79ed211c0bb92710700bcc41 SHA512 a0195679ab55ed9c7ea18ace6dbf0fc994698f1f4eea9d8335dfdcdcd6a68975c0191bd22f150bf5a9a0a691ce7e9e73d79598e1e8be541efa1d9824a633d877 WHIRLPOOL 5c1d3e933bdfa4b1f20f98dbf8b5c1669eb857b9db60dacae488fa04331300618df2f1265e4fb2e58ed31b24229df0edb8c30970d8172fd65ca7fa03bc0e3805
 DIST pidgin-2.10.7.tar.bz2 10069279 SHA256 eba32994eca20d1cf24a4261b059b2de71a1ec2dd0926e904074b0db49f7f192 SHA512 0f0d421f91be3b1577527f3609bff164d7c57a94338e18dca5d8b7d911634a98b9c0e8860f3e62026eba09a6afb3112a8cd6770a90c89afdb9fb40f83dd6f3e4 WHIRLPOOL 025a392ab069817e2fea07d0e9e7efeee006eaf4ce2e6571c49b851735309f3346bfdbf34c874f55b440b71fbbba0ac55029da727b1f731175d72efb2e74f3b4
+DIST pidgin-eds-3.6.patch.bz2 2352 SHA256 321185dd5f44e502f671b17e84fa1ca2e08a3f7c79ed211c0bb92710700bcc41 SHA512 a0195679ab55ed9c7ea18ace6dbf0fc994698f1f4eea9d8335dfdcdcd6a68975c0191bd22f150bf5a9a0a691ce7e9e73d79598e1e8be541efa1d9824a633d877 WHIRLPOOL 5c1d3e933bdfa4b1f20f98dbf8b5c1669eb857b9db60dacae488fa04331300618df2f1265e4fb2e58ed31b24229df0edb8c30970d8172fd65ca7fa03bc0e3805
 EBUILD pidgin-2.10.7-r1.ebuild 7196 SHA256 503c720666eace61455aa57b854f9fde0d5320906d50f4cfedf650e698dcc94c SHA512 f75243e7071b3381af567bd621f626aab99f741b588a3b637b7c7e93730b3b555d845f8d4ede95a947d1159cab905879ba362a36658e9749d12df60833f45af1 WHIRLPOOL d8780190a547b32b266ce475ffbc63eedcf740e18adf9c5d78ab02a5967bf04be7cc8377ebc8e5b9bb91634844522349ca1d20def2bbc3bb1c631035ae2ff49a
-EBUILD pidgin-2.10.7-r2.ebuild 7302 SHA256 909380709e7effd20b9b1ed6736c8845df46c230474a0ca1ed28bc8cd0718d41 SHA512 a22814979a8f846bf34082b501fa3b99d4376c7e8806de22e1ac33952695ff0e39818e780551fa789da8bfb3303c7df97d3fc3b8ea9a830372f7f22685d121dd WHIRLPOOL 9ca3d28afd845006ee429fad7c227dbadd1b7786215ac1753a31405697c193f07434e792a67af67ec37dd62676e85492d72c3a91f6e278bb0138f112a458b1db
-MISC ChangeLog 43754 SHA256 8a2e2ac07916f96c986ea5b0734b4f99989055dd0a97c974c04224d899fa10da SHA512 b36a3321572cac1222f415297b63c37e0c2f3d7318c6b425868bfb87e9916b475e1eab07445bc40a8de01f3f42ae864bfded4ec60956b1302e14d237db92d197 WHIRLPOOL f3da3adfb585b61e6b0886b340a319a1ce0b2f6b4a69b492eac7541e3820ba1b4c6f8d6b6abd15d7ad0b1d28cd4cc2edfae4c0a559f2acebc2b43bb194d6a63c
+EBUILD pidgin-2.10.7-r2.ebuild 7358 SHA256 f6b817c87c5c9c6833be8003c8b06f216cb98fdebe43cc52839cebe842b95656 SHA512 6ae630076ddbb63939ecbf14979a044ca11df5c02140d9f3abb851ba40f26e69d04048a072c430dcdb267a3d43424459aa8ded5278e5724e50eb9ebcc0febe11 WHIRLPOOL 378c1e8cbd6fe9bec4f6d182be7e33a45278031326cde89fa9c23c4dde62b9895cf88514bca523b15a47e3a443d7baafa49c4e9788c282be831ac0d5d491e075
+MISC ChangeLog 43929 SHA256 6e987de6cbf2c423e99b4ee8625fb00bb7c39f6505aa946998bd29dff627e14a SHA512 56f300e0ea0a2d40234009b664ad5cfdb6554a5158132a9f414f0a882e4453adc47e613a0ced94195d38c5acfe3c1387ab6ae7a2abb94d1dee7fced51bce3ce0 WHIRLPOOL dade7009211aefd68a46edf1a2b69e9e931467c8ec67f9709c43afb27cc5d4a71a337005aa2f89ed5a8aef2228a72ce6d293a538e0a0cc2234f25f79ab944ec7
 MISC metadata.xml 1469 SHA256 5ca9b28465b16f382131076f07b9da546c34979bd8b681e980684ba8df7aabb9 SHA512 30cbf602434bd058632099ed6545a62a9ed476b1cc98f46a5500c61a0c8deb2a2325f74c08cfb7ac486128c5979646308e3c9a1c292e2f0bc9832a413079ccce WHIRLPOOL 745038f3b97b3d3e5adbf7d98292f0effe00553ce5c53f888dde4d02cf73b80fd62901b19acad2d0988902dcbc9813f5953c6d13348f2bb7409bfeeda05ab6af
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCAAGBQJRwwytAAoJEPiazRVxLXTF2rEQAJN1PF9YSyCrlTvgtc6Vi2Z8
-ML/FL1+pvv1UwVT6YVviSsF4+S0+HXRVeh3rUrtf6X5lxJEAGldBCVll2ynhuTRo
-aoAkuW9PwUDHL2YVFSgXmKj4fyXbnGV5WcA265/+cp1DbkLHC4DDw7XHAryXjrP1
-Mzt+VKWBc0JfTUM763jb6JwyojHue6mUAC2RH/t0++qyo7083KhpNs8ZT9cUOaZr
-7MQbDiZZRbTjqc1swsUCkktiCoZxZpPqYKT5hr5pdO+K1g1kijVO5ftNfrP4pVwd
-4VLL0Krx+XUJTRcpiJi5K/XRJzPKUW+xqJH2KfH57Dz0XHdkJBGcMHjyucqJUZdF
-bvnbztJu6Ux6iZNbn48qVpt8eSbAopoFNHTxEdOeAc0gAukPwH9tSSPisnsMPhwR
-p21uv1tDf/lqOm7dGoTF/7NUb+MjlrqcBHDFtmDAFstYsowV6cG8V+MRKrcyJ88u
-HbazBDP7iLiwQ4MhjLVBeYnoOA34IbFt6vrgvCqMA6HGWVHKL4V9adG5k6r4rsE3
-ib6OCGIG9X/2HDbdtwmmGfIfgK2mXfqkpAHX+Kpof0/GVlKI9qsuL3NEZnWcVOV8
-iwW9JOgDNig8LQorSjWia6ywA26/CSHAtf/QiRHo/ZFhWTUQbVluLIXo1q70zTx0
-0vXx3YeL9k318Sv4w+m3
-=pdz9
+iQIcBAEBCAAGBQJRw/CiAAoJEPiazRVxLXTFSDMQAJYNVm8Qn/F7F/7urJsbTBAD
+qNrxcXjjrR9kJIoNdZ2tf2AZ8BfQ/mvCglKrHnafZmdHwzZSdpUDmgeOkPJolUVQ
+BkkgUj2XVu3l3RVux21ip0SVJ7wtTvkwS/JzIV08GEOPy7+1Av/Lw7e/1iRA8MMS
+YHKpFv8nfLtC4NqEbPDoKVR9mKczH4zgSgMZ4p+wAkR+TlaGCtrrvFQBV0wGyTJN
+YVD4tAXeZagerVs2oSQ3cfLr7XqT4o1iZAFcK+6ghNOuRs/LGbrLrou7XXBiB9JM
+HmOKF/dePZOWcqHjJ2L4SZGro4lpOs75EnYYWKS4/yLDjqiBDn9t+IZtfq5DFBo5
+JPFQmBJZtCEtVi1aIZoRaqii2ACUEaOckUMNr8lHEqyvj/xJPK5IqmXIInG0bh7S
+L6DRml+/j3gC1VBDYcssOO5zHdy6AKwmoloUFVQWLv0dPNV83j4BHzvm+f+yBJ3A
+5og+Ceq8PodGHu4puGuDZkgk0U2zBqZqXuiMJT1RN4OgSXcyztbKJ527Pci9T1Uk
+sSz9GyCiIflceNIVQDEZ8UhOL4krqL/vMIsPwDxboeulFZZxTEoApYTjLTboZ/cm
+OiY/ci/Mdhj36otzv1RyBJ3Z9odPgkunn51MEOnJwvj6llnOSYOlhizPJOej3wG0
+8DuWsrIN5z4pp3nIA6yL
+=AicI
 -----END PGP SIGNATURE-----
