@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/suse-build
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/suse-build/ChangeLog,v 1.15 2013/05/27 16:38:29 miska Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/suse-build/ChangeLog,v 1.16 2013/06/21 12:15:56 scarabeus Exp $
+
+  21 Jun 2013; Tomáš Chvátal <scarabeus@gentoo.org>
+  -suse-build-2013.02.27.ebuild, suse-build-2013.05.17.ebuild:
+  Stabilise on amd64 and x86. Drop older.
 
 *suse-build-2013.05.17 (27 May 2013)
 
